# hitwh-notice

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
astrbot_plugin_hitwh_info/: README.md  __init__.py  _conf_schema.json  _utils.py  db.py  embedding.py  fact_splitter.py  hierarchy.py  main.py  metadata.yaml  models.py  parser.py  post_process.py  requirements.txt  sources.py  web_config.py
astrbot_plugin_hitwh_info/fetchers/: __init__.py  _edu_base.py  base.py  education.py  exams.py  grades.py  plan.py  playwright_edu.py  qq_channel.py  qq_collector.py  qq_group.py  schedule.py  website.py
tests/: conftest.py  test_config_cleanup.py  test_fact_splitter.py  test_fetchers_parser.py  test_hierarchy.py  test_llm_tools.py  test_plugin_optimizations.py  test_web_config_startup.py
