[project]
name = "astrbot-plugin-hitwh-info"
version = "0.1.0"
description = "HITWH campus information AstrBot plugin with hierarchy-aware atomic fact retrieval"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "pydantic>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["asyncio: run coroutine tests with the local asyncio runner"]

[tool.ruff]
line-length = 100
target-version = "py312"
