[project]
name = "astrbot-plugin-hitwh-info"
version = "0.1.0"
description = "HITWH campus information AstrBot plugin with hierarchy-aware atomic fact retrieval"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "pydantic>=2.0",
    "more-itertools>=10.0",
    "tenacity>=9.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["astrbot_plugin_hitwh_info*"]

[tool.setuptools.package-data]
astrbot_plugin_hitwh_info = ["*.yaml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["asyncio: run coroutine tests with the local asyncio runner"]

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
